Header Hello align fixed

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -56,7 +56,7 @@ h1 {
 }
 
 #hello hgroup, #hello #hgroup {
-	width: 650px;
+	width: 610px;
 	margin: 0 auto 0;
 }
 
@@ -516,8 +516,8 @@ width: 517px;
 
 #vcard {
 	display: block;
-	width: 5.5em;
-	margin: 0 5px;
+	width: 6.99em;
+	margin: -20px 5px;
 	float: right;
 }
 
